Add Gulp wwwroot and for gulp and angular2 libraries

--- a/EF7EntityApp/src/EF7EntityApp/project.json
+++ b/EF7EntityApp/src/EF7EntityApp/project.json
@@ -11,7 +11,7 @@
   },
 
   "dependencies": {
-    "EF7EntityApp.DAL": { "target": "project" }
+    "EF7EntityApp.DAL": "1.0.0-*"
   },
 
   "commands": {
