--- a/EF7EntityApp/src/EF7EntityApp/Properties/launchSettings.json
+++ b/EF7EntityApp/src/EF7EntityApp/Properties/launchSettings.json
@@ -1,10 +1,25 @@
 {
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:64616/",
+      "sslPort": 0
+    }
+  },
   "profiles": {
     "EF7EntityApp": {
       "commandName": "EF7EntityApp",
       "launchBrowser": true,
       "launchUrl": "http://localhost:8888",
       "sdkVersion": "dnx-clr-win-x64.1.0.0-rc1-update1"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "Hosting:Environment": "Development"
+      }
     }
   }
 }
